k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  namespace: laravel

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: sojib123/laravel-nginx:v3
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          volumeMounts:
            - name: laravel-code
              mountPath: /var/www/html

      volumes:
        - name: laravel-code
          emptyDir: {}
