k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: php-fpm
  namespace: laravel

spec:
  replicas: 2

  selector:
    matchLabels:
      app: php-fpm

  template:
    metadata:
      labels:
        app: php-fpm

    spec:
      containers:
        - name: php-fpm
          image: sojib123/backend:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 9000

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"
