k8s/php-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: php-fpm-service
  namespace: laravel

spec:
  selector:
    app: php-fpm

  ports:
    - port: 9000
      targetPort: 9000
